# rlinalg

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: requirements.txt  test.yml
docs/: conf.py  copyright.rst  index.rst  install.rst  requirements.txt
docs/api/: cond.rst  index.rst  lstsq.rst  qr.rst  qr_multiply.rst
docs/api/linpack/: dqrdc2.rst  dqrls.rst  dqrqty.rst  dqrqy.rst  dqrsl.rst  dtrco.rst
rlinalg/: __init__.py  _cond.py  _decomp_qr.py  _kappa.py  _lstsq.py  _misc.py  meson.build
rlinalg/linpack/: .gitignore  __init__.py  _dqrdc2.pyf  _dqrls.pyf  _dqrqty.f  _dqrqty.pyf  _dqrqy.f  _dqrqy.pyf  _dqrsl.pyf  _dqrutl.pyf  _dtrco.pyf  _linpack.pyf  meson.build
rlinalg/tests/: __init__.py  meson.build  test_doctest.py  test_lstsq.py  test_qr.py
