[metadata]
name = rlinalg
version = attr: rlinalg.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/rlinalg
description = Linear Algebra routines as implemented the R language
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
platform = any
keywords = linalg, linear algebra, qr, linpack
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Fortran
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Mathematics
    Typing :: Typed
project_urls =
    Documentation = https://rlinalg.readthedocs.io/en/stable/
    Bug Tracker = https://github.com/althonos/rlinalg/issues
    Changelog = https://github.com/althonos/rlinalg/blob/master/CHANGELOG.md
    Coverage = https://codecov.io/gh/althonos/rlinalg/
    Builds = https://github.com/althonos/rlinalg/actions
    PyPI = https://pypi.org/project/rlinalg

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >=46.4
    fmodpy ~=1.0
install_requires =
    numpy ~=2.0
tests_require =
    importlib-resources ; python_version < '3.7'

[coverage:report]
include = rlinalg/*
omit = rlinalg/tests/*
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
